--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Panda Website</title>
 </head>
 
 <body>
     <h1>Panda</h1>
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
