--- a/index.html
+++ b/index.html
@@ -5,13 +5,143 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Panda Website</title>
 </head>
 
 <body>
-    <h1>Panda</h1>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shooes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
+        <!-- slider starts -->
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info my-5 rounded-3 p-3 p-lg-5">
+                        <div class="row">
+                            <div class="col-lg-7 m-auto">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="img/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-info mt-5 border rounded-3 p-3 p-lg-5">
+                        <div class="row">
+                            <div class="col-lg-7 m-auto">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$1200</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="img/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item bg-info mt-5 border rounded-3 p-3 p-lg-5">
+                        <div class="row">
+                            <div class="col-lg-7 m-auto">
+                                <h1>X-Box for your living room</h1>
+                                <p>This is the best x-box in the world for people who just want to waste time in front
+                                    of
+                                    fake sports.</p>
+                                <h1>$600</h1>
+                                <button class="btn btn-danger">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="img/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- slider ends -->
+
+    </header>
+
+    <main>
+        <!-- catagories starts -->
+        <section class="my-5">
+            <div class="container text-center">
+                <div class="row g-2 g-md-3 g-lg-4">
+                    <!-- Single Item -->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3 rounded-3 bg-warning text-white d-flex align-items-center justify-content-between">
+                            <h1>Watch</h1>
+                            <img src="img/categories/watch.png" alt="watch">
+                        </div>
+                    </div>
+                    <!-- Single Item -->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3 rounded-3 bg-success text-white d-flex align-items-center justify-content-between">
+                            <h1>Bag</h1>
+                            <img src="img/categories/bag.png" alt="watch">
+                        </div>
+                    </div>
+                    <!-- Single Item -->
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div
+                            class="p-3 rounded-3 bg-primary text-white d-flex align-items-center justify-content-between">
+                            <h1>Shooes</h1>
+                            <img src="img/categories/shoes.png" alt="watch">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- catagories ends -->
+    </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
