--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info mt-5 border rounded-3 p-3 p-lg-5">
+                    <div class="carousel-item bg-info my-5 rounded-3 p-3 p-lg-5">
                         <div class="row">
                             <div class="col-lg-7 m-auto">
                                 <h1>Mega LCD TV For Sports</h1>
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info mt-5 border rounded-3 p-3 p-lg-5">
+                    <div class="carousel-item bg-info my-5 rounded-3 p-3 p-lg-5">
                         <div class="row">
                             <div class="col-lg-7 m-auto">
                                 <h1>X-Box for your living room</h1>
@@ -141,6 +141,63 @@
             </div>
         </section>
         <!-- catagories ends -->
+
+        <!-- Shoes Starts -->
+        <section class="container my-5">
+            <h3>Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="img/shoes/shoe-1.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <h5>$120</h5>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="img/shoes/shoe-2.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <h5>$320</h5>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="img/shoes/shoe-3.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <h5>$350</h5>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Shoes Ends -->
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
