--- a/index.html
+++ b/index.html
@@ -147,49 +147,48 @@
             <h3>Shoes</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 border-0 shadow-lg">
                         <img src="img/shoes/shoe-1.png" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Supply 350</h5>
+                            <h2>$120</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
                             <small>
-                                <h5>$120</h5>
                                 <button class="btn btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 border-0 shadow-lg">
                         <img src="img/shoes/shoe-2.png" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Nike 360</h5>
+                            <h2>$320</h2>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                         </div>
                         <div class="m-3">
                             <small>
-                                <h5>$320</h5>
                                 <button class="btn btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 border-0 shadow-lg">
                         <img src="img/shoes/shoe-3.png" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
+                            <h2>$350</h2>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
+                                additional content.</p>
                         </div>
                         <div class="m-3">
                             <small>
-                                <h5>$350</h5>
                                 <button class="btn btn-danger">Buy Now >></button>
                             </small>
                         </div>
@@ -198,6 +197,62 @@
             </div>
         </section>
         <!-- Shoes Ends -->
+
+        <!-- Backpack Starts -->
+        <section class="container my-5">
+            <h3>Backpack</h3>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="img/bags/bag-1.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h2>$120</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="img/bags/bag-2.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Blu Niltu Bag</h5>
+                            <h2>$320</h2>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="img/bags/bag-3.png" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h2>$350</h2>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content.</p>
+                        </div>
+                        <div class="m-3">
+                            <small>
+                                <button class="btn btn-danger">Buy Now >></button>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Backpack ends -->
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
