--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="img/logo.png" alt="">
@@ -28,13 +28,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shooes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
         </nav>
 
         <!-- slider starts -->
-        <section>
+        <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active bg-info my-5 rounded-3 p-3 p-lg-5">
@@ -143,7 +143,7 @@
         <!-- catagories ends -->
 
         <!-- Shoes Starts -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h3>Shoes</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -199,7 +199,7 @@
         <!-- Shoes Ends -->
 
         <!-- Backpack Starts -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h3>Backpack</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -253,6 +253,22 @@
             </div>
         </section>
         <!-- Backpack ends -->
+
+        <!-- subscribe starts -->
+        <section class="container bg-info d-flex align-items-center justify-content-center rounded-2 my-5"
+            style="height: 300px;" id="subscribe">
+            <form class="d-flex flex-column align-items-start">
+                <h4>LET'S STAY IN TOUCH</h4>
+                <p class="text-muted">Get updates on sales, specials and more</p>
+                <input type="email" id="email">
+                <button class="btn btn-danger mt-2" type="submit">Submit</button>
+            </form>
+        </section>
+        <!-- subscribe ends -->
+
+        <footer class="text-center text-muted">
+            <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        </footer>
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
