--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info my-5 rounded-3 p-3 p-lg-5">
+                    <div class="carousel-item active panda-bg-info my-5 rounded-3 p-3 p-lg-5">
                         <div class="row">
                             <div class="col-lg-7 m-auto">
                                 <h1>Cool Dude Headphone</h1>
@@ -54,14 +54,14 @@
                                     front
                                     of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info my-5 rounded-3 p-3 p-lg-5">
+                    <div class="carousel-item panda-bg-info my-5 rounded-3 p-3 p-lg-5">
                         <div class="row">
                             <div class="col-lg-7 m-auto">
                                 <h1>Mega LCD TV For Sports</h1>
@@ -69,14 +69,14 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button class="btn btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/tv.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item bg-info my-5 rounded-3 p-3 p-lg-5">
+                    <div class="carousel-item panda-bg-info my-5 rounded-3 p-3 p-lg-5">
                         <div class="row">
                             <div class="col-lg-7 m-auto">
                                 <h1>X-Box for your living room</h1>
@@ -84,7 +84,7 @@
                                     of
                                     fake sports.</p>
                                 <h1>$600</h1>
-                                <button class="btn btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -113,27 +113,24 @@
         <!-- catagories starts -->
         <section class="my-5">
             <div class="container text-center">
-                <div class="row g-2 g-md-3 g-lg-4">
+                <div class="row g-2 g-md-3 g-lg-4 catagories">
                     <!-- Single Item -->
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div
-                            class="p-3 rounded-3 bg-warning text-white d-flex align-items-center justify-content-between">
+                        <div class="p-3 rounded-3 text-white d-flex align-items-center justify-content-between">
                             <h1>Watch</h1>
                             <img src="img/categories/watch.png" alt="watch">
                         </div>
                     </div>
                     <!-- Single Item -->
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div
-                            class="p-3 rounded-3 bg-success text-white d-flex align-items-center justify-content-between">
+                        <div class="p-3 rounded-3 text-white d-flex align-items-center justify-content-between">
                             <h1>Bag</h1>
                             <img src="img/categories/bag.png" alt="watch">
                         </div>
                     </div>
                     <!-- Single Item -->
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div
-                            class="p-3 rounded-3 bg-primary text-white d-flex align-items-center justify-content-between">
+                        <div class="p-3 rounded-3 text-white d-flex align-items-center justify-content-between">
                             <h1>Shooes</h1>
                             <img src="img/categories/shoes.png" alt="watch">
                         </div>
@@ -158,7 +155,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -174,7 +171,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -190,7 +187,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -214,7 +211,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -230,7 +227,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -246,7 +243,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -256,13 +253,13 @@
         <!-- Backpack ends -->
 
         <!-- subscribe starts -->
-        <section class="container bg-info d-flex align-items-center justify-content-center rounded-2 my-5"
+        <section class="container panda-bg-info d-flex align-items-center justify-content-center rounded-2 my-5"
             style="height: 300px;" id="subscribe">
             <form class="d-flex flex-column align-items-start">
                 <h4>LET'S STAY IN TOUCH</h4>
                 <p class="text-muted">Get updates on sales, specials and more</p>
                 <input type="email" id="email">
-                <button class="btn btn-danger mt-2" type="submit">Submit</button>
+                <button class="btn panda-btn-danger mt-2" type="submit">Submit</button>
             </form>
         </section>
         <!-- subscribe ends -->
