--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                     front
                                     of funky world.</p>
                                 <h1>$420</h1>
-                                <button class="btn panda-btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -69,7 +69,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button class="btn panda-btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -84,7 +84,7 @@
                                     of
                                     fake sports.</p>
                                 <h1>$600</h1>
-                                <button class="btn panda-btn-danger">Buy Now</button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="img/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -155,7 +155,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
                             </small>
                         </div>
                     </div>
@@ -269,6 +269,7 @@
         </footer>
     </main>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/dom.js"></script>
 </body>
 
 </html>
