--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <!-- Shoes Ends -->
 
         <!-- Backpack Starts -->
-        <section class="container my-5" id="backpack">
+        <section class="container my-5 py-4 rounded-4" id="backpack">
             <h3>Backpack</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -259,7 +259,7 @@
                 <h4>LET'S STAY IN TOUCH</h4>
                 <p class="text-muted">Get updates on sales, specials and more</p>
                 <input type="email" id="email">
-                <button class="btn panda-btn-danger mt-2" type="submit">Submit</button>
+                <button id="email-submit" disabled class="btn panda-btn-danger mt-2" type="submit">Submit</button>
             </form>
         </section>
         <!-- subscribe ends -->
