--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
         <!-- Shoes Ends -->
 
         <!-- Backpack Starts -->
-        <section class="container my-5 py-4 rounded-4" id="backpack">
-            <h3>Backpack</h3>
+        <section class="container my-5 py-4 px-4 rounded-4" id="backpack">
+            <h3 class="text-white pb-3">Backpack</h3>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card h-100 border-0 shadow-lg">
@@ -257,7 +257,7 @@
             style="height: 300px;" id="subscribe">
             <form class="d-flex flex-column align-items-start">
                 <h4>LET'S STAY IN TOUCH</h4>
-                <p class="text-muted">Get updates on sales, specials and more</p>
+                <p>Get updates on sales, specials and more</p>
                 <input type="email" id="email">
                 <button id="email-submit" disabled class="btn panda-btn-danger mt-2" type="submit">Submit</button>
             </form>
