--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="m-3">
                             <small>
-                                <button class="btn panda-btn-danger buy-now">Buy Now >></button>
+                                <button class="btn panda-btn-danger buy-now">Buy Now</button>
                             </small>
                         </div>
                     </div>
